Synchronized headings with TOC entries

--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/navigation.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/navigation.htm
@@ -1,14 +1,14 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 
 <head>
- <title>Navigating the user interface by using the keyboard</title>
+ <title>Navigating the user interface using the keyboard</title>
  <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css"> 
  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
 
  <body>
 
- <h1>Navigating the user interface by using the keyboard</h1>
+ <h1>Navigating the user interface using the keyboard</h1>
  <p>The user interface is navigable using the keyboard. The Tab key is used to
  iterate through the controls in a particular scope (for example, a dialog or a view and
  its related icons). To navigate to the main controls for the Workbench window
