--- a/bundles/org.eclipse.platform.doc.user/concepts/chelpsys.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/chelpsys.htm
@@ -6,12 +6,12 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Online help system</title>
+<title>Help system</title>
 </head>
 
 <body>
 
-<h1>Online help system</h1>
+<h1>Help system</h1>
 
 <p>The online help system lets you 
 browse, search, and print system documentation. The documentation is organized into sets of 
