--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07b.htm
@@ -4,12 +4,12 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Using the file menu</title>
+<title>Using the File menu</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <h3>
-Using the file menu</h3>
+Using the File menu</h3>
 <P CLASS="Para">
 You can create new resources by using the <b>File &gt; New</b> menu on the Workbench menubar.
 Start by creating a simple project as follows:</P>
