--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-80_ant.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-80_ant.htm
@@ -4,12 +4,12 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Ant &amp; External Tools tutorial</title>
+<title>Ant &amp; external tools tutorial</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">Ant &amp; External Tools tutorial</H1>
-<P CLASS="Para">This chapter covers Eclipse's External Tools framework, and its 
+<H1 CLASS="Head">Ant &amp; external tools tutorial</H1>
+<P CLASS="Para">This chapter covers Eclipse's external tools framework, and its 
   integration with <a href="http://ant.apache.org/">Ant</a>, the build tool from 
   the <a href="http://www.apache.org/">Apache Software Foundation</a>. If you 
   are not familiar with Ant, please look the <a href="http://ant.apache.org/manual/index.html">Apache Ant manual</a> 
@@ -19,7 +19,7 @@
 <P CLASS="Para">This chapter is split into three main sections. First, we cover 
   the basics of working with Ant buildfiles in Eclipse. Next, we work through 
   several Eclipse use cases in which Ant buildfiles can make life a little easier. 
-  Finally, we consider the entire External Tools framework and how to use non-Ant 
+  Finally, we consider the entire external tools framework and how to use non-Ant 
   tools.</P>
 
 
