--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-88_create_plugin.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-88_create_plugin.htm
@@ -8,7 +8,7 @@
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<h4>Creating a HelloWorld plugin</h4>
+<h4>Creating a HelloWorld plug-in</h4>
 <P CLASS="Para">To work through this example, we need to create a simple 'Hello 
   World' Eclipse plug-in. Creating Eclipse plugins is covered in more detail elsewhere 
   in this documentation, so we will just create a simple HelloWorld plugin as 
