--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-95_external_tools.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-95_external_tools.htm
@@ -4,11 +4,11 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>External Tools</title>
+<title>External tools</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<h2>External Tools</h2>
+<h2>External tools</h2>
   
 <P CLASS="Para">Up to this point in the tutorial, we've discussed Ant as if it 
   were the only type of external tool available for use in Eclipse. The fact is 
