--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-68dg.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-68dg.htm
@@ -4,13 +4,13 @@
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Merging changes in the Compare editor</title>
+<title>Merging changes in the compare editor</title>
 </HEAD>
 
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">Merging changes in the Compare editor</H1>
+<H1 CLASS="Head">Merging changes in the compare editor</H1>
 
-<p>The toolbar buttons in the Compare editor allows you to merge changes from the left file to the
+<p>The toolbar buttons in the compare editor allows you to merge changes from the left file to the
 right file and vice versa. There are four types of merges you can perform:
 </p>
 
