--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-87b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-87b.htm
@@ -8,7 +8,7 @@
 </HEAD>
 
 <BODY BGCOLOR="#ffffff">
-<H1>Restoring deleted resources from the local history</H1>
+<H1>Restoring deleted resources from local history</H1>
 
 <p>To restore a deleted Workbench resource with a state from the local history:
 </p>
@@ -16,7 +16,7 @@
 <ol>
   <li>In the Navigator view, select the folder or project into which you want to restore  
     a local history state.</li>
-  <li>From the resource's pop-up menu, select <b>Restore From Local History...</b>.
+  <li>From the resource's pop-up menu, select <b>Restore from Local History...</b>.
   The Restore From Local History dialog opens showing all files that were previously contained
   in the selected folder or project and all of their sub-folders.</li>
   <li>Check the files that you want to restore</li>
