--- a/bundles/org.eclipse.platform.doc.user/tasks/tf1help.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tf1help.htm
@@ -4,13 +4,13 @@
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Accessing context sensitive help</title>
+<title>Accessing context-sensitive help</title>
 </head>
 
 <BODY BGCOLOR="#ffffff">
-<h1>Accessing context sensitive help</h1>
+<h1>Accessing context-sensitive help</h1>
 
-<p>To access the context sensitive help for a given widget:
+<p>To access the context-sensitive help for a given widget:
 
 <ol>
   <li>Select the widget by putting focus on it (see the table below).</li>
