Added missing line of text from JanesFile.txt

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35.htm
@@ -32,7 +32,8 @@ look like this:</p>
           There is not much else<br>
           we can really say about it other<br>
           than it has five lines of<br>
-          text that are rather dull.</i></P>
+          text that are rather dull.<br>
+          This is a 6th line</i></P>
         </blockquote>
       </li>
   <li>
