Synchronized headings with TOC entries

--- a/bundles/org.eclipse.platform.doc.isv/guide/compare_structureviewer.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/compare_structureviewer.htm
@@ -4,13 +4,13 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<TITLE>Implementing a Structure Viewer</TITLE>
+<TITLE>Implementing a structure viewer</TITLE>
 
 <link rel="stylesheet" type="text/css" HREF="../book.css">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H2>
-Implementing a Structure Viewer</H2>
+Implementing a structure viewer</H2>
 
 
 <p>
