--- a/bundles/org.eclipse.platform.doc.isv/guide/debug.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/debug.htm
@@ -4,13 +4,13 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<TITLE>Program debug and launching support</TITLE>
+<TITLE>Program debug and launch support</TITLE>
 
 <link rel="stylesheet" type="text/css" HREF="../book.css">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1>
-Program debug and launching support</H1>
+Program debug and launch support</H1>
 <p>The resource plug-ins in the Eclipse platform allow you to manage a set a
 source files for a program and compile them using an incremental project
 builder.&nbsp; Plug-ins can define new builders that handle special resource
