--- a/bundles/org.eclipse.platform.doc.isv/guide/dialogs_wizards_wizarddialogs.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/dialogs_wizards_wizarddialogs.htm
@@ -14,7 +14,7 @@ Wizard dialogs
 
 
 <h2>
-Using wizard dialogs</h2>
+Wizard dialogs</h2>
 <P >
 The previous example supplied a wizard for a specified extension point. Another, perhaps more common,
 case is that you want to launch your own plug-in's wizard from some action that you have defined. (In
