--- a/bundles/org.eclipse.platform.doc.isv/guide/swt_threading.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/swt_threading.htm
@@ -10,7 +10,7 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H2>
-Threading issues for clients</H2>
+Threading issues</H2>
 <P >
 When working with a widget toolkit, it is important to understand the underlying thread model that is used for reading and dispatching platform GUI events. The implementation of the UI thread affects the rules that applications must follow when using Java threads in their code.</P>
 
