--- a/bundles/org.eclipse.platform.doc.isv/guide/swt_widgets_custom.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/swt_widgets_custom.htm
@@ -10,7 +10,7 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H3>
-Custom Widgets</H3>
+Custom widgets</H3>
 
 <P >
 Occasionally, you may find that none of the controls provided in SWT meet the need of your application. In these cases, you may want to extend SWT by implementing your own custom widget. SWT itself
