--- a/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
+++ b/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
@@ -127,6 +127,19 @@
 			Drag &amp; Drop - all missing imports will be added and references updated.</td>
 		</tr>
 		<tr>
+			<td width="20%" valign="top" align="right"><b>Use Drag &amp; Drop to move and copy Java code elements</b></td>
+			<td valign="top" align="left" width="80%">You can move and copy Java elements such as methods and fields by 
+			Drag &amp; Drop. This will not trigger refactoring - only the code will be copied or moved.</td>
+		</tr>
+		<tr>
+			<td width="20%" valign="top" align="right"><b>You can easily put code of Java elements in the system clipboard</b></td>
+			<td valign="top" align="left" width="80%">When you select a set of methods, fields and types and press <b>Ctrl + C</b>
+			(or invoke the <b>Edit > Copy</b> action), the source code of the selected elements is put in the system clipboard. 
+			You can then paste it (<b>Ctrl + V</b> or <b>Edit > Paste</b>) in another location within the workbench
+			or even in other applications (such as your email program).</td>
+		</tr>
+		
+		<tr>
 			<td width="20%" valign="top" align="right"><b>Use Templates to create
 			a method</b></td>
 			<td valign="top" align="left" width="80%">You can define a new
@@ -384,7 +397,7 @@
         if you have code like this:</p>
            <pre>String message= &quot;This is some long message.&quot;;</pre>
            
-      <p>position your caret after the &quot;some&quot; word and press Enter. 
+      <p>position your caret after the &quot;some&quot; word and press <b>Enter</b>. 
         The code will be automatically changed to:</p>
            <pre>String message= &quot;This is some&quot; + 
            &quot; long message.&quot;;</pre>
