Spell check pass

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-62b_sync.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-62b_sync.htm
@@ -21,7 +21,7 @@ others have made (update).
 </P>
 
 <blockquote>
-  <P><img src="../images/Image82_repo_syncview.gif" alt="Synchonize - Release Mode" border="0" width="478" height="473">
+  <P><img src="../images/Image82_repo_syncview.gif" alt="Synchronize - Release Mode" border="0" width="478" height="473">
 </P>
 
 
@@ -32,7 +32,7 @@ in. Outgoing mode allows us to commit changes we have made locally to
 the repository. By default if you Synchronize with Repository and the repository has no
 changes for you to take, you are automatically placed into outgoing mode
 to let you quickly commit your changes.  We'll come back to
-&quot;Incomming Mode&quot;a little later.
+&quot;Incoming Mode&quot;a little later.
 </P>
 
 <P>In &quot;Outgoing Mode&quot; the top area (#1) shows all of the resources that
