--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-83_edit.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-83_edit.htm
@@ -27,7 +27,7 @@
     to activate content assist. You are presented with a list of valid completions. 
     In this case there is only one, the &lt;target&gt; tag. Select this completion 
     and notice that the editor inserts both the opening and closing tags and leaves 
-    the cursor postioned for you to enter properties for this tag.</li>
+    the cursor positioned for you to enter properties for this tag.</li>
   <li>Name this target 'World'.</li>
   <li>Enter an 'echo' task for this target similar to that for the Hello target, 
     but change the text to 'World'.</li>
