--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-86_use_cases.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-86_use_cases.htm
@@ -13,7 +13,7 @@
 <P CLASS="Para">Now that we've seen how to work with Ant buildfiles in Eclipse, 
   let's look at two ways that Ant buildfiles can be useful in Eclipse.</P>
 <ul>
-  <li>Deploying Eclipse plugins</li>
+  <li>Deploying Eclipse plug-ins</li>
   <li>Building projects</li>
 </ul>
 <p>We'll start by using an Ant buildfile to handle various aspects of deploying 
