--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-88_create_plugin.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-88_create_plugin.htm
@@ -10,12 +10,12 @@
 <BODY BGCOLOR="#ffffff">
 <h4>Creating a HelloWorld plug-in</h4>
 <P CLASS="Para">To work through this example, we need to create a simple 'Hello 
-  World' Eclipse plug-in. Creating Eclipse plugins is covered in more detail elsewhere 
-  in this documentation, so we will just create a simple HelloWorld plugin as 
+  World' Eclipse plug-in. Creating Eclipse plug-ins is covered in more detail elsewhere 
+  in this documentation, so we will just create a simple HelloWorld plug-in as 
   follows:</P>
 <ol>
   <li> 
-    <P CLASS="Para">Create a new plugin project by menuing to <b>File &gt; New &gt; Other...</b></P>
+    <P CLASS="Para">Create a new plug-in project by menuing to <b>File &gt; New &gt; Other...</b></P>
   </li>
   <li>Select <b>Plug-in Development</b> in the left pane, and <b>Plug-in Project</b> in 
     the right and click <b>Next</b>.</li>
@@ -25,8 +25,8 @@
     then select <b>Hello, World</b> from the list below and click <b>Next</b>.</li>
   <li>Accept all the defaults on this page and click <b>Finish</b>.</li>
 </ol>
-<p>Now that we have a plugin project, we can create a build.xml file for it to 
-  manage plugin deployment.</p>
+<p>Now that we have a plug-in project, we can create a build.xml file for it to 
+  manage plug-in deployment.</p>
 
 
 <P><br>
