--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-89_generate_buildxml.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-89_generate_buildxml.htm
@@ -10,7 +10,7 @@
 <BODY BGCOLOR="#ffffff">
 <h4>Generating the build.xml file</h4>
   
-<P CLASS="Para">Open a Navigator view and locate your new plugin project.</P>
+<P CLASS="Para">Open a Navigator view and locate your new plug-in project.</P>
 <ol>
   <li>Select the file 'plugin.xml' underneath your new project and right-click 
     <b>Create Ant Build File</b>.</li>
@@ -22,11 +22,11 @@
     <img src="../images/Image607_buildxml.gif" alt="default build.xml file" border="0" width="634" height="525"></li>
 </ol>
 <p>The build.xml file is a default Ant buildfile with many targets useful for deploying 
-  your plugin. For example, there are individual targets to build all necessary 
-  jars for your plugin, create a .zip file containing everything in your plugin, 
+  your plug-in. For example, there are individual targets to build all necessary 
+  jars for your plug-in, create a .zip file containing everything in your plug-in, 
   cleanup any .zip files that may have been created and so on. </p>
 <p>Now that we have the build.xml file, we will use it to build a .jar file for 
-  our plugin.</p>
+  our plug-in.</p>
 
 
 <P><br>
