--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-90_build_jar.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-90_build_jar.htm
@@ -4,14 +4,14 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Building a .jar file for the plugin</title>
+<title>Building a .jar file for the plug-in</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <h4>Building a .jar file for the plug-in</h4>
   
 <P CLASS="Para">Now we are ready to use the build.xml Ant buildfile that was created 
-  in the last sectrion:</P>
+  in the last section:</P>
 <ol>
   <li>Select the build.xml file in the Navigator and choose <b>Run Ant...</b> from 
     the context menu.</li>
