--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-91_build_options.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-91_build_options.htm
@@ -16,7 +16,7 @@
   buildfile has a number of targets.<br>
   <img src="../images/Image608_buildxml_outline.gif" alt="Outline view of default build.xml file" border="0" width="217" height="405"> 
 </P>
-<P CLASS="Para">Solid green arrows denote targets, while subtargets are represented 
+<P CLASS="Para">Solid green arrows denote targets, while sub-targets are represented 
   by hollow green arrows. The following are the useful top-level targets:</P>
 <ul>
   <li><b>build.update.jar</b> This target builds jars for the plug-in, then zips 
@@ -35,7 +35,7 @@
   this buildfile to handle your particular projects. For example, if you have a directory 
   that contains resources necessary for your plug-in, you will want to update 
   the build.xml file to include this directory in the jars and zips it creates.</p>
-<p>This completes our look at using Ant buildfiles to deploy Eclipse plugins. The 
+<p>This completes our look at using Ant buildfiles to deploy Eclipse plug-ins. The 
   key points to remember are that you can easily create a default deployment buildfile 
   for a plug-in that contains many useful targets, and that while this default 
   buildfile is useful, you may have to modify it to suit your needs.</p>
