--- a/bundles/org.eclipse.platform.doc.user/tasks/taccess.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/taccess.htm
@@ -29,7 +29,7 @@ major sets of documentation available.
     the same way back and forward buttons work in an Internet browser, taking 
     you to topics you have already looked at.</li>
   <li>To synchronize the navigation frame with the current topic, click the <b>Synchronize</b> 
-    button <img src="../images/synch_toc_nav.gif" alt="Synchonize button" border="0" width="16" height="16">. 
+    button <img src="../images/synch_toc_nav.gif" alt="Synchronize button" border="0" width="16" height="16">. 
     This is helpful if you have followed several links to related topics in several 
     files, and want to see where the current topic fits into the navigation path.</li>
 </ol>
@@ -46,8 +46,8 @@ widget and press F1. For more details, refer to the list of related topics below
 <h2>Maximizing help frames</h2>
 
 <p>To increase the space available for viewing the help content, the frame that
-displayes content can be maximized. To maximize the frame, double click its toolbar.
-To return the frame to its original size, doble click the tool bar again.
+displays content can be maximized. To maximize the frame, double click its toolbar.
+To return the frame to its original size, double click the tool bar again.
 Similarly, you can maximize the frame showing navigation, by double clicking its toolbar.
 </p>
 
