--- a/bundles/org.eclipse.platform.doc.user/tasks/task-team-cmdlineclient.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/task-team-cmdlineclient.htm
@@ -11,10 +11,10 @@
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">Running the CVS command-line client outside of Eclipse</H1>
 <h3>Compatibility</h3>
-<p>Because the Eclipse CVS plugin stores its meta information in a format that 
+<p>Because the Eclipse CVS plug-in stores its meta information in a format that 
   is compatible with the command-line CVS client you should be able to use a CVS 
   command line client against Eclipse workspace files on disk. The metadata is 
-  stored in CVS/ subdirectories but you rarely see them within Eclipse. They are 
+  stored in CVS/ sub-directories but you rarely see them within Eclipse. They are 
   marked as private which causes them to be hidden from view. If you open a (non-Eclipse) 
   file explorer you will see that these directories and their contents appear 
   on the file system.</p>
@@ -27,7 +27,7 @@
   is a sign that there are resources in Eclipse that have been modified outside 
   of Eclipse. One solution is to perform a refresh (available from a resource's 
   popup menu) on any resources or projects that where modified outside of Eclipse. 
-  There is also an <em>auto-refresh</em> plugin available from <a href="http://dev.eclipse.org/viewcvs/index.cgi/%7Echeckout%7E/platform-core-home/dev.html">Platform 
+  There is also an <em>auto-refresh</em> plug-in available from <a href="http://dev.eclipse.org/viewcvs/index.cgi/%7Echeckout%7E/platform-core-home/dev.html">Platform 
   Core</a> web site.</p>
 <h3>Caveats</h3>
 <p><strong>1. Deleted folders</strong></p>
