--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-100d.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-100d.htm
@@ -38,7 +38,7 @@
   the file to the repository.
 </p>
 
-<p>When adding a folder or project, the action will recursively descend into subfolders, 
+<p>When adding a folder or project, the action will recursively descend into sub-folders, 
   adding those files it finds to version control, provided the files have not 
   been explicitly ignored. </p>
 
