--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-100d2.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-100d2.htm
@@ -42,7 +42,7 @@
 
 <P>The cvsignore file consists of a list of files, directories, or patterns. 
   In a similar way to the global ignore facility, the wildcards * and ? may be 
-  present in any entry in the .cvsignore file. Any file or subdirectory 
+  present in any entry in the .cvsignore file. Any file or sub-directory 
   <i>in the current directory</i> that matches any one of the patterns will 
   be ignored.
 </P>
