--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-117.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-117.htm
@@ -37,7 +37,7 @@ does not already exist remotely.
     project name or enter another name.</li>
   <li>Click <b>Finish</b> to share the project with the repository. The project 
     folder will be created remotely and the Synchronize view will open and allow 
-    the committing of the project's resouces. <b>(Note</b>: If the project already 
+    the committing of the project's resources. <b>(Note</b>: If the project already 
     exists remotely, the Synchronize view will show conflicts on any files that 
     exist both locally and remotely.)</li>
 </ol>
