--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-33.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-33.htm
@@ -21,9 +21,9 @@
   <li>In the Install Configuration view, expand the Current Configuration item.
     The first tier of items are locations on the local computer where the files
     for features and plug-ins are stored. For a typical product, all features
-    are installed in a single directory subtree. However, a feature that is
+    are installed in a single directory sub-tree. However, a feature that is
     installed as an extension of another product are usually located in a
-    separate directory subtree.</li>
+    separate directory sub-tree.</li>
   <li>Expand the location to see the feature versions installed there.</li>
   <li>The nesting of the features indicates which child features are included in
     a given parent feature. Nested features act as a unit.</li>
