--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-96a.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-96a.htm
@@ -20,7 +20,7 @@ CVS repository to the Workbench:
     view to the current perspective.</li>
   <li>In the CVS Repositories view, expand the repository location.</li>
   <li>Expand <b>HEAD</b> and select the modules that you want to add to the Workbench. 
-    <em>Note</em>: Modules appear as root folders of the repository but are assocated 
+    <em>Note</em>: Modules appear as root folders of the repository but are associated 
     with the <img src="../images/tasks-96b-module_rep.gif" alt="CVS module icon" border="0" width="16" height="16"> 
     icon.</li>
   <li>From the pop-up menu select <b>Check Out Module</b>. This will checkout 
