--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-96b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-96b.htm
@@ -41,8 +41,8 @@
         contents of the remote folder.</li>
       <li><strong>Parent of target folder</strong>: The existing local folder 
         into which the target folder will be created.</li>
-      <li><strong>Checkout subfolders</strong>: The option to indicate whether 
-        the subfolders of the remote folder should be checked out as children 
+      <li><strong>Checkout sub-folders</strong>s: The option to indicate whether 
+        the sub-folders of the remote folder should be checked out as children 
         of the target folder.</li>
     </ol>
   </li>
