--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-9c.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-9c.htm
@@ -67,7 +67,7 @@ You can use the Navigator fast view as you would normally.&nbsp;&nbsp; </P>
 To hide the fast view simply click off of it or click on the Minimize button on
 the fast view's toolbar </P>
 <P CLASS="Para">
-<img src="../images/Image61_fast_minimize.gif" alt="Minimze button" border="0" width="242" height="94"> </P>
+<img src="../images/Image61_fast_minimize.gif" alt="Minimize button" border="0" width="242" height="94"> </P>
 <P CLASS="Para">&nbsp; </P>
 <P CLASS="Para">Note: If you open a file from the Navigator fast view, the fast
 view will automatically hide itself to allow you to work with the
