--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-cvs-watch.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-cvs-watch.htm
@@ -14,7 +14,7 @@
   By setting a <em>watch</em> on a file, you can have CVS notify you via email 
   (or other) if someone else starts to <em>edit</em> this file. </P>
 <p class="Para">There are two parts to CVS watches: <em>watch</em>, and <em>edit</em>. 
-  The first, <em>watch</em>, is how you specify which files you wish to be nofitied 
+  The first, <em>watch</em>, is how you specify which files you wish to be notified 
   about. The second, <em>edit</em>, is how you inform the CVS server (and thus 
   others) that you are about to modify a file.</p>
 <p class="Para"><em>Edit</em> is useful on its own without ever setting up any 
@@ -57,7 +57,7 @@
   CVS automatically issues an edit as soon as you start to modify a file. This 
   support is built deep into Eclipse, so typing in a text editor, performing Java 
   refactoring, etc., will all issue a CVS edit for you. You can also perform an 
-  explit edit via the <strong>Team &gt; Edit</strong> context menu on a resource.</p>
+  explicit edit via the <strong>Team &gt; Edit</strong> context menu on a resource.</p>
 <p>When an <em>edit</em> is issued, you will be informed immediately if someone 
   is already editing that file. In addition, everyone who is <em>watching</em> 
   that file will be notified by the CVS server via email etc. Since watches simply 
