--- a/bundles/org.eclipse.platform.doc.user/tips/platform_tips.html
+++ b/bundles/org.eclipse.platform.doc.user/tips/platform_tips.html
@@ -115,7 +115,7 @@ productivity.</p>
     <td width="20%" valign="top" align="right"><b>Go to last edit location</b></td>
     <td width="80%" valign="top" align="left"><b>Navigate &gt; Go
       to Last Edit Location</b> (Ctrl+Q) takes you back to
-      the place where you last made a change. A button marked <img border="0" src="images/last_edit_pos.gif" alt="Go to last edit postion icon" width="16" height="16">
+      the place where you last made a change. A button marked <img border="0" src="images/last_edit_pos.gif" alt="Go to last edit position icon" width="16" height="16">
       shows up in the toolbar when the Editor Navigation command is
       enabled. If this command does not appear in your perspective, you can 
     add it by selecting <b>Window &gt; Customize Perspective &gt; Other &gt;
@@ -540,7 +540,7 @@ productivity.</p>
       <p> <img src="images/compare-showancestor.gif" alt="Show Ancestor Pane button in compare viewer" width="367" height="175" border="0"> 
       <p>
     	If you always want to have the ancestor pane open automatically for conflicts, 
-    	you can check the option <strong>Initally show ancestor pane</strong> on the
+    	you can check the option <strong>Initially show ancestor pane</strong> on the
     	Text Compare tab of the Compare/Patch preference page.
     	<p>
     </td>
