--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-3e.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-3e.htm
@@ -35,7 +35,7 @@ supports two additional ways to open the file associated with a selected bookmar
 
 <ol>
   <li>From the bookmark's context menu choose <b>Go To</b></li>
-  <li>From the view's toolbar click on the Go To toolbar button <img src="../images/Image54_bookmark_goto.gif" alt="Bookmark goto button" border="0" width="29" height="22"></li>
+  <li>From the view's toolbar click on the Go To toolbar button <img src="../images/Image54_bookmark_goto.gif" alt="Bookmark Go to button" border="0" width="29" height="22"></li>
 </ol>
 <P>The Bookmarks view allows you to select the associated file in the Navigator.
 </P>
