--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-82_create.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-82_create.htm
@@ -20,7 +20,7 @@
 <p>As long as the file has a .xml extension, Eclipse will consider it to be a 
   possible Ant buildfile, and will enable Ant-related actions when it is selected.</p>
 <p>As we will see in a later section, you can create an Ant buildfile for an Eclipse 
-  plugin that contains predefined targets related useful for deploying the plugin.</p>
+  plug-in that contains predefined targets related useful for deploying the plug-in.</p>
 
 
 <P>
