--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-93_project_builder.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-93_project_builder.htm
@@ -61,7 +61,7 @@
 </ol>
 <p>For a Java project, the default Java Builder will always be run and cannot 
   be removed. The Java Builder runs the internal Eclipse Java compiler which in 
-  turn is reponsible for indexing your source so that searching, refactoring and 
+  turn is responsible for indexing your source so that searching, refactoring and 
   many other features are available. Thus it is not possible to replace the internal 
   Eclipse Java compiler by using a project builder. Your only option with the 
   Java Builder is when it runs with respect to the project builders that you define.</p>
