--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-94_run_pj.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-94_run_pj.htm
@@ -16,14 +16,14 @@
   trigger project builders are defined in the External Tools dialog and can be 
   any combination of full, incremental or auto builds. Let's see how this works.</P>
 <ol>
-  <li>Select the HW project in the Navigator. In the workbech menu bar, choose 
+  <li>Select the HW project in the Navigator. In the workbench menu bar, choose 
     <b>Project &gt; Rebuild Project</b> </li>
   <li>The project is rebuilt and the projectBuilder.xml buildfile is run. Notice 
     the output from this buildfile in the Console view. </li>
   <li>Make sure the Autobuild preference is turned on, them make some trivial 
     change to HelloWorld.java and save the change. The save triggers an auto build, 
     but the auto build does not trigger the project builder. </li>
-  <li>Suppose we don't want to see the buildfile output everytime it runs. Go back 
+  <li>Suppose we don't want to see the buildfile output every time it runs. Go back 
     to the External Tools Builders page of the project properties dialog on HW. 
     Select the Makejar entry and click <b>Edit...</b>. On the <b>Main</b> tab, uncheck the 
     <b>Capture Output</b> option, apply the change and exit back to the workbench. 
