--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-100b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-100b.htm
@@ -52,7 +52,7 @@
 <table width="100%" border="0">
   <tr> 
     <td width="20%"><strong>Update from Repository</strong></td>
-    <td width="80%">This action is enabled on files that contain incomming changes. 
+    <td width="80%">This action is enabled on files that contain incoming changes. 
       Running this action will bring the changes into the file in the workspace.</td>
   </tr>
   <tr> 
