--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-2.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-2.htm
@@ -82,8 +82,8 @@ See the example in the previous section for an illustration.
 
 <h2>Adding third party plug-ins</h2>
 <p>
-If you have installed extra plugins in your Eclipse environment, you will need to add
-these new plugins to each new build or version of Eclipse you install.  Before you do
+If you have installed extra plug-ins in your Eclipse environment, you will need to add
+these new plug-ins to each new build or version of Eclipse you install.  Before you do
 this, refer to the documentation for those plug-ins to ensure they are compatible
 with the version of Eclipse you are moving to.  There are several ways to add these
 extra plug-ins to your new Eclipse install:
