--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-68b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-68b.htm
@@ -139,7 +139,7 @@ Off</P>
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="tasks-68.htm">Comparing resources</a><br>
-<a href="tasks-115.htm">Synchronizing with the respository</a><br>
+<a href="tasks-115.htm">Synchronizing with the repository</a><br>
 <a href="tasks-68dg.htm">Merging changes in the Compare editor</a>
 </p>
 
