--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-175.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-175.htm
@@ -49,6 +49,7 @@ one of the the light bulb icons to invoke Quick Fix.
     <p>
       <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"><br>
        <a href="../concepts/concepts-7.htm">Java editor</a><br>
+<a href="../concepts/cquickfix.htm">Available Quick Fix proposals</a><br>
     </p>
     <p>
       <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
