Replaced &nbsp; with a comma where appropriate

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07b.htm
@@ -22,7 +22,7 @@ From the menubar, select <b>File &gt; New &gt; Project...</b></P>
   </li>
   <li>
 <P CLASS="Para">
-In the left pane&nbsp; select <b>Simple</b>, and on the right, select <b>Project</b>; then click <b>Next</b>.&nbsp;</P>
+In the left pane, select <b>Simple</b>, and on the right, select <b>Project</b>; then click <b>Next</b>.</P>
   </li>
   <li>
 <P CLASS="Para">
