*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/concepts/cbookmrk.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cbookmrk.htm
@@ -25,7 +25,7 @@ Bookmarks</b>) displays all bookmarks&nbsp; that you have created.&nbsp;</P>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="../tasks/tasks-81b.htm">Creating a bookmark for an entire file</a><a href="../tasks/tasks-81.htm"><br>
 Creating a bookmark within a file</a><a href="../tasks/tasks-82.htm"><br>
-Deleting a Bookmark<br>
+Deleting a bookmark<br>
 </a><a href="../tasks/tasks-77.htm">Adding line items in the Tasks view</a><a href="../tasks/tasks-77b.htm"><br>
 Associating a task with an editable resource</a></p>
 
