--- a/bundles/org.eclipse.platform.doc.user/concepts/ctskview.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/ctskview.htm
@@ -39,7 +39,7 @@ to the current perspective, click <b>Window &gt; Show View &gt; Tasks</b>.
 <a href="../tasks/tasks-3e.htm">Moving and docking views</a><br>
 <a href="../tasks/tasks-77.htm">Adding line items in the Tasks view</a><br>
 <a href="../tasks/tasks-77b.htm">Associating a task with a resource</a><br>
-  <a href="../tasks/tasks-79.htm">Filtering the Task view</a><br>
+  <a href="../tasks/tasks-79.htm">Filtering the Tasks view</a><br>
 <a href="../tasks/tasks-81b.htm">Creating a bookmark for an entire file</a><br>
 <a href="../tasks/tasks-81.htm">Creating a bookmark within a file</a><br>
 <a href="../tasks/tquickfix.htm">Automatically fixing problems</a><br>
