--- a/bundles/org.eclipse.platform.doc.user/concepts/csearchview.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/csearchview.htm
@@ -42,7 +42,7 @@ Toolbar</h2>
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="../tasks/tasks-84.htm">Searching for text within a file</a><br>
-<a href="../tasks/tasks-84b.htm">Searching For Files</a>
+<a href="../tasks/tasks-84b.htm">Searching for files</a>
 <br>
 </p>
 
