--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36a.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36a.htm
@@ -28,7 +28,9 @@
 	<li>The <b>Customize</b> button allows you to choose what kinds of searches are available in the dialog. This setting may be left unchanged.</li>
 	<li>Click <b>Search</b>.
 		<br>Note that you can click <b>Cancel</b> to cancel the search while it is in progress and that the Search dialog shows the progress of the search. <img src="../images/Image51_search_progress.gif" alt="Search Dialog" border="0" width="488" height="386"></li>
-	<li>Observe that the Search view displays: <blockquote> <img src="../images/Image51_search_view.gif" alt="Search view" border="0" width="362" height="152"></blockquote></li>
+	<li>Observe that the Search view displays: 
+    <blockquote> <img src="../images/Image51_search_view.gif" alt="Search view" border="0" width="306" height="100"></blockquote>
+  </li>
 </ol>
 
 <p> In the next section we will learn how to work with the Search view.</p>
