--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36b.htm
@@ -14,8 +14,7 @@
 <p>Now that we have completed our search for &quot;it&quot; the
 Search view is visible. The title of the Search view shows that four matches were found.&nbsp;</p>
 <blockquote>
-  <p>
-  <img src="../images/Image51_search_view.gif" alt="Search view" border="0" width="362" height="152">&nbsp;&nbsp;</p>
+  <p> <img src="../images/Image51_search_view.gif" alt="Search view" border="0" width="306" height="100">&nbsp;&nbsp;</p>
 </blockquote>
 <p CLASS="Head"> Within the
 Search view two files are shown and we can further see that within each file
@@ -36,10 +35,15 @@ view.&nbsp;</p>
 	<li>Choose <b>Remove Current Match</b> from the popup. Notice how JanesFile.txt only has one match left.</li>
 	<li>Select JanesText.txt in the Search view.</li>
 	<li>Choose <b>Remove Selected Match</b> from the popup menu. 
-		<br>The Search view now shows only one match for JanesFile.txt <blockquote><img src="../images/Image51_search_reduced.gif" alt="Search view" border="0" width="392" height="119"></blockquote></li>
+		<br>The Search view now shows only one match for JanesFile.txt 
+    <blockquote><img src="../images/Image51_search_reduced.gif" alt="Search view" border="0" width="253" height="154"></blockquote>
+  </li>
 	<li>Perform a second search for &quot;that&quot; by clicking on the Search button <img src="../images/Image50_search.gif" alt="Search button" border="0" width="26" height="22"> in the Workbench's toolbar.</li>
 	<li>The Search view updates to show the results of the new search.
-		<br>You can move back and forth between your two search results using the drop down button on the Search view;s toolbar. <blockquote><img src="../images/Image51_search_switching.gif" alt="Search view" border="0" width="356" height="154"></p></blockquote></li>
+		<br>
+    You can move back and forth between your two search results using the drop 
+    down button on the Search view's toolbar. 
+    <blockquote><img src="../images/Image51_search_switching.gif" alt="Search view" border="0" width="356" height="154"></p></blockquote></li>
 	<li>In the drop down button choose &quot;it&quot; - 1 Occurrence. The Search view switches back to show you the original search. On the context menu choose <b>Search Again</b> to repeat the initial search. Notice that once again we have four matches.</li>
 </ol>
 
