--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-18.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-18.htm
@@ -1,1 +1,38 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Linking the Navigator view to the active editor</title></HEAD><BODY BGCOLOR="#ffffff"><H1>Linking the Navigator view to the active editor</H1><P>When you have multiple files open for editing, you can configurethe Navigator view to automatically bring an open file to the foreground (makeits editor session the active editor) every time you select that open file inthe Navigator view.</P><ol>  <li>From the main menu, select <b>Window &gt; Preferences</b>.</li>  <li>In the left pane, select the Workbench category.</li>  <li>In the right pane, select <b>Link Navigator selection to active editor</b>.</li></ol><p>If you leave the check box cleared, you will need to click tabsin the editor area or double-click open files in the Navigator view, in order tocontrol which editor is active.</p><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-6.htm">Editors</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-46.htm">Opening files for editing</a><br><a href="tasks-51.htm">Associating editors with file types</a></p><p>&nbsp;<br><a href="../hglegal2003.htm"><img src="../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation and others 2000, 2003" border="0" width="324" height="14"></a></p></BODY></HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<HTML>
+<HEAD>
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
+<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
+<title>Linking the Navigator view to the active editor</title>
+</HEAD>
+
+<BODY BGCOLOR="#ffffff">
+<H1>Linking the Navigator view to the active editor</H1>
+
+<P>When you have multiple files open for editing, you can configure the Navigator 
+  view to automatically bring an open file to the foreground (make its editor 
+  session the active editor) every time you select that open file in the Navigator 
+  view. There are two ways to set this</P>
+
+<ol>
+  <li>From the Navigator menu, select <b>Link With Editor.</b></li>
+  <li>Ckick on the Link With Editor icon <img src="../images/synced.gif" width="16" height="16">on 
+    the Navigator bar.</li>
+</ol>
+
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
+<a href="../concepts/concepts-6.htm">Editors</a>
+</p>
+
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="tasks-46.htm">Opening files for editing</a><br>
+<a href="tasks-51.htm">Associating editors with file types</a>
+</p>
+
+<p>&nbsp;<br>
+<a href="../hglegal2003.htm"><img src="../images/ngibmcpy2003.gif" alt="Copyright IBM Corporation and others 2000, 2003" border="0" width="324" height="14"></a>
+</p>
+
+</BODY>
+</HTML>
