--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-77b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-77b.htm
@@ -42,7 +42,7 @@ Delete key in the Tasks view.
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="tasks-77.htm">Adding line items in the Tasks view</a><br>
 <a href="tasks-78.htm">Deleting tasks</a><br>
-<a href="tasks-79.htm">Filtering the Task view</a><br>
+<a href="tasks-79.htm">Filtering the Tasks view</a><br>
 <a href="tasks-81b.htm">Creating a bookmark for an entire file</a><br>
 <a href="tasks-81.htm">Creating a bookmark within a file</a>
 </p>
