*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-29.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-29.htm
@@ -26,10 +26,10 @@
 <p class="Para"> When this situation arises, you can view the differences between 
   three resource versions: the resource in the Workbench, the version of the resource 
   that is committed in the branch, and the <i> common ancestor</i> from which the 
-  two conflicting versions are based.&nbsp;&nbsp;(If a common ancestor cannot 
-  be determined) For example, because a resource with the same name and path was 
+  two conflicting versions are based.&nbsp;&nbsp;If a common ancestor cannot 
+  be determined, for example because a resource with the same name and path was 
   created and committed by two different developers, the comparison becomes a 
-  two-way comparison.) </p>
+  two-way comparison. </p>
 <h1>Interpreting compare results</h1>
 <p>The Synchronize view allows you to view the differences between two or three 
   files. If a common ancestor is available, the sync view performs a three way 
