*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync2.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync2.htm
@@ -17,9 +17,10 @@
       (#2). 
       <p><img src="../images/Image83_jane5a.gif" alt="Incoming mode" border="0" width="465" height="451"></p>
   </li>
-  <li>Select file1.txt (the incoming change). The comparison viewer shows that&nbsp;the
-repository copy of file1.txt has a new line inserted (Fred-update).
-<p><img src="../images/Image83_jane4.gif" alt="Text Compare" border="0" width="444" height="195"></li>
+  <li>Open file1.txt (the incoming change) by double-clicking. The comparison 
+    viewer shows that&nbsp;the repository copy of file1.txt has a new line inserted 
+    (Fred-update). 
+    <p><img src="../images/Image83_jane4.gif" alt="Text Compare" border="0" width="444" height="195"></li>
   <li>
 <p CLASS="Para"> From the context menu of file1.txt choose <b>Update</b>. 
       This will cause your Workbench to be updated with the repository copy of 
