--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync3_rel.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-64c_catch_sync3_rel.htm
@@ -17,7 +17,7 @@
       of the view now indicates we are in Outgoing Mode (#2). 
       <p><img src="../images/Image84_relmode.gif" alt="Outgoing mode" border="0" width="670" height="100"></p>
       </li>
-  <li>Select file3.txt (the outgoing change).&nbsp; </li>
+  <li>Open file3.txt (the outgoing change) by double-clicking.&nbsp; </li>
   <li>The comparison viewer shows that&nbsp;our copy 
       of file3.txt has a change to the second line.&nbsp; The repository copy 
       is shown in the right pane. 
