--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-62b_sync.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-62b_sync.htm
@@ -40,11 +40,10 @@ need to be committed.
 </P>
 
 
-<P>The bottom area (#2 and #3) is the text compare area we worked with in the basic
-tutorial. By selecting a resource in the <b>Structured Compare</b> list the lower area
-displays the differences between what we have in the Workbench (#2) versus what is currently
-in the repository (#3).
-</P>
+<P>The bottom area (#2 and #3) is the text compare area we worked with in the 
+  basic tutorial. By double-clicking on a resource in the <b>Structured Compare</b> 
+  list the lower area displays the differences between what we have in the Workbench 
+  (#2) versus what is currently in the repository (#3). </P>
 
 
 <P>Toolbar buttons (A) allow you to switch between outgoing mode and other
