*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/accessmain.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/accessmain.htm
@@ -28,7 +28,7 @@
    assistive technology.</li>
    <li>You can operate all features using the keyboard instead of the mouse. See 
    the related task. </li>
-   <li>You can use screen-reader software such as Freedom Scientifics JAWS <sup>TM</sup>
+   <li>You can use screen-reader software such as Freedom Scientific's JAWS <sup>TM</sup>
     and a digital speech synthesizer to hear what is displayed on the 
    screen. You can also use voice recognition software,
    such as IBM ViaVoice <sup>TM</sup> to enter data and to navigate the user 
