--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/fontsandcolors.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/fontsandcolors.htm
@@ -14,7 +14,7 @@ possible. On Windows the platform color and font settings are found on the
 <b>Properties &gt; Appearance</b> page. The font used by most widgets in Eclipse is the
 one set in the Message Box settings of the properties. However, operating
 systems do not provide enough colors to handle all of the extra information that
-color and fonts provide in Eclipse.&nbsp;</p>
+colors and fonts provide in Eclipse.&nbsp;</p>
 <h2>Fonts</h2>
 <p><img src="../../images/accessibility_new_project.gif" alt="New Project Wizard" border="0" width="499" height="499"></p>
 <p>There are 4 main fonts in use by the Eclipse platform. They are: </p>
