--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-29.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-29.htm
@@ -66,7 +66,7 @@
    </a><a href="../tasks/tasks-68.htm">Comparing resources</a> <a
  href="../tasks/tasks-115.htm"><br>
    Synchronizing with a repository<br>
-  </a><a href="../tasks/tasks-68dg.htm">Merging changes in the Compare editor</a><a
+  </a><a href="../tasks/tasks-68dg.htm">Merging changes in the compare editor</a><a
  href="../tasks/tasks-113.htm"><br>
    </a><a href="../tasks/tasks-113b.htm"> Resolving conflicts</a><a
  href="../tasks/tasks-68b.htm"><br>
